# AndroidAssistantDemo

./: .gitignore  CRAB-DECRYPT.txt  README  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/administrator/myapplication/: StrongService.aidl
app/src/main/java/com/example/administrator/myapplication/: AccessibilityOpenHelperActivity.java  AppInfoActivity.java  AppListActivity.java  MainActivity.java  (+16 more)
app/src/main/java/net/java/entity/: APNMatchTools.java  AppBean.java  Father.java  Son.java  SportInfo.java  StorageInfo.java  dayStep.java
app/src/main/java/net/java/service/: commonServiceI.java  commonServiceImpl.java
app/src/main/java/net/java/utils/: Base64Utils.java  BaseAccessibilityService.java  BlueToothManager.java  DBOpenHelper.java  LoadListView.java  MacUtil.java  PermissionsChecker.java  ScreenShot.java  ScreenShotListenManager.java  StorageUtils.java  SystemUtil.java  Telephone.java  TrafficUtils.java  VpnHelper.java  VpnUtil.java  WifiListener.java  ndkTest.java  serviceUtils.java
app/src/main/jni/: ndkTest.c
app/src/main/res/layout/: activity_appinfo.xml  activity_applist.xml  activity_device.xml  activity_index.xml  activity_list_scroll.xml  activity_main.xml  activity_permission.xml  activity_permission_two.xml  activity_register.xml  activity_show.xml  activity_upordown.xml  camera.xml  content_main.xml  device_lay.xml  list_item.xml  list_scroll.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: device_admin.xml  serviceconfig.xml
(+12 files in other folders)
